Adding Changes for Cities functionality
